Updates to case study paper, including changing method labels

--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -265,15 +265,15 @@ The LRP on the proportion of CUs was identified as all 3 CUs containing inlets w
 
 <!-- Is this section missing?-->
 
-## LRP ESTIMATION: AGGREGATE ABUNDANCE LOGISTIC REGRESSION-BASED LRPS
+## LRP ESTIMATION: AGGREGATE ABUNDANCE LOGISTIC REGRESSIONLRPS
 
 
 Empirical LRPs based on the probability of all component inlets (nested within CUs) exceeded their lower benchmarks could not be identified for WCVI Chinook because there are no years when all inlets were above their lower benchmark in the historical record (Figure \@ref(fig:chinook-InletTimeSeries)). In order to fit a logistic regression model to data, observations of successes (years when all inlets were > lower benchmarks) and failures (years when all inlets were not > lower benchmarks) are required. The estimation of empirical LRPs is limited to SMUs with historical records that demonstrate contrast in status over time.
 
-## LRP ESTIMATION: PROJECTION-BASED LRPS
+## LRP ESTIMATION: PROJECTION LRPS
 ### Methods
 
-Projection-based LRPs were derived for WCVI Chinook by projecting inlet-specific population dynamics using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). We chose to project inlet-specific rather than CU-specific population dynamics to reflect the relative demographic isolation of inlets. Population dynamics and exploitation parameters were derived from a previously developed CU-specific run-reconstruction for WCVI Chinook based on spawner abundances and age compositions from indicator stocks, and exploitation rates from the Robertson Creek hatchery indicator stock (D. Dobson & D. McHugh, pers. comm. DFO South Coast Stock Assessment). Because this run-reconstruction has not been peer-reviewed, it is not used to develop benchmarks, but can provide plausible distributions for parameters of projections. CU-specific parameters were applied across all component inlets. Inlet-specific population capacities, S~REP~, were estimated from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006] (Table \@ref(tab:chinook-WA)) and applied in projections of recruitment with a Ricker stock-recruitment model. The model was initialized at inlet-specific equilibrium abundances and projected for a 40-year initialization period to stabilize the distributions of spawner abundances. The model was then run for an additional 30 years and annual aggregate abundances and inlet-specific status were recorded. Because the projections identify long-term equilibrium abundances and statuses, the outputs are independent of initial abundances. Projections were summarized over 50,000 random Monte Carlo trials. A relatively large number of Monte Carlo trials was required for LRP estimation because the algorithm required a sufficient sample size within each 200-fish incremental bin of aggregate abundances along a range of realistic abundances (from near zero to capacity). <!-- CH comment: for base case, though we used only 10,000 for sensitivity analyses. --> Base-case parameters are provided in Table \@ref(tab:chinook-BaseCasePars) and sensitivity analyses are described in the text.  Projection-based LRPs were identified from the aggregate abundances with specified probabilities of all component inlets being above lower benchmarks. We recommend a review of model assumptions and parameters by local experts prior to adopting a projection-based LRP for this SMU. We provide an example for demonstration purposes.
+Projection LRPs were derived for WCVI Chinook by projecting inlet-specific population dynamics using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). We chose to project inlet-specific rather than CU-specific population dynamics to reflect the relative demographic isolation of inlets. Population dynamics and exploitation parameters were derived from a previously developed CU-specific run-reconstruction for WCVI Chinook based on spawner abundances and age compositions from indicator stocks, and exploitation rates from the Robertson Creek hatchery indicator stock (D. Dobson & D. McHugh, pers. comm. DFO South Coast Stock Assessment). Because this run-reconstruction has not been peer-reviewed, it is not used to develop benchmarks, but can provide plausible distributions for parameters of projections. CU-specific parameters were applied across all component inlets. Inlet-specific population capacities, S~REP~, were estimated from the watershed-area model [@parkenHabitatbasedMethodsEstimate2006] (Table \@ref(tab:chinook-WA)) and applied in projections of recruitment with a Ricker stock-recruitment model. The model was initialized at inlet-specific equilibrium abundances and projected for a 40-year initialization period to stabilize the distributions of spawner abundances. The model was then run for an additional 30 years and annual aggregate abundances and inlet-specific status were recorded. Because the projections identify long-term equilibrium abundances and statuses, the outputs are independent of initial abundances. Projections were summarized over 50,000 random Monte Carlo trials. A relatively large number of Monte Carlo trials was required for LRP estimation because the algorithm required a sufficient sample size within each 200-fish incremental bin of aggregate abundances along a range of realistic abundances (from near zero to capacity). <!-- CH comment: for base case, though we used only 10,000 for sensitivity analyses. --> Base-case parameters are provided in Table \@ref(tab:chinook-BaseCasePars) and sensitivity analyses are described in the text.  Projection LRPs were identified from the aggregate abundances with specified probabilities of all component inlets being above lower benchmarks. We recommend a review of model assumptions and parameters by local experts prior to adopting a projection LRP for this SMU. We provide an example for demonstration purposes.
 
 \renewcommand*{\arraystretch}{1.6}
 \begin{longtable}[]{p{3.7cm} p{5cm} p{6.3cm}}
@@ -551,7 +551,7 @@ We ran a sensitivity analysis under an alternative assumption where age proporti
 
 ### Results
 
-Projection-based LRPs were developed under the base-case assumptions of (1) interannual variability in exploitation rates among inlets with a CV = 0.085, (2) correlations in recruitment residuals among inlets equal to observed spawner correlations among inlets, and (3) variability in age proportions among CUs and years. We identified a provisional aggregate abundance LRP with p=0.5 (50% probability of all inlets being greater than their lower benchmark) equal to `r (read.csv("data/chinook-ProjectedLRPsbaseER_ALLp.csv")%>% pull(LRP))[1]` (Figure \@ref(fig:chinook-baseCaseProjLRP)). Provisional LRPs at p=0.66 ("likely" that all inlets are above their lower benchmarks) is also shown, near 20,000 (Figure \@ref(fig:chinook-baseCaseProjLRP)). Probabilities that all inlets exceeded lower benchmarks did not exceed 0.9, so LRPs at higher p values could not be estimated. Note that the LRP at p=0.66 required more MC trials for full stabilization and is shown here for demonstration purposes only.
+Projection LRPs were developed under the base-case assumptions of (1) interannual variability in exploitation rates among inlets with a CV = 0.085, (2) correlations in recruitment residuals among inlets equal to observed spawner correlations among inlets, and (3) variability in age proportions among CUs and years. We identified a provisional aggregate abundance LRP with p=0.5 (50% probability of all inlets being greater than their lower benchmark) equal to `r (read.csv("data/chinook-ProjectedLRPsbaseER_ALLp.csv")%>% pull(LRP))[1]` (Figure \@ref(fig:chinook-baseCaseProjLRP)). Provisional LRPs at p=0.66 ("likely" that all inlets are above their lower benchmarks) is also shown, near 20,000 (Figure \@ref(fig:chinook-baseCaseProjLRP)). Probabilities that all inlets exceeded lower benchmarks did not exceed 0.9, so LRPs at higher p values could not be estimated. Note that the LRP at p=0.66 required more MC trials for full stabilization and is shown here for demonstration purposes only.
 
 
 ```{r chinook-baseCaseProjLRP, echo=FALSE, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 50,000 MC Trials.  Each dot is the proportion of MC trials where all inlets were > lower benchmarks. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue) are highlighted, where p is the probability of all inlets being > their lower benchmarks.", out.width = '60%', fig.pos='!ht'}
@@ -566,9 +566,9 @@ knitr::include_graphics("figure/chinook-baseER-ProjLRPCurve-ALLp.png")
 <!--KH: You had asked for the colour codes I used to add my p lines in the projected plot.I used: colList<-c("#E69F00", "#56B4E9", "#009E73", "#D55E00").  However, I think your colours are similar, so I think its ok if this doesn't get changed.  Or, if it waits awhile.  -->
 
 
-Candidate projection-based LRPs were compared against time-series of aggregate abundances observed for WCVI Chinook salmon (sum of indicator stocks with PNI > 0.5), showing that abundances are currently below these LRPs and have been near or below them over the available time-series (Figure \@ref(fig:chinook-statusProjLRP)).
+Candidate projection LRPs were compared against time-series of aggregate abundances observed for WCVI Chinook salmon (sum of indicator stocks with PNI > 0.5), showing that abundances are currently below these LRPs and have been near or below them over the available time-series (Figure \@ref(fig:chinook-statusProjLRP)).
 <!--CH; remove WCVI Chinook label at top of plot, and change colour of horizontal lines-->
-```{r chinook-statusProjLRP, echo=FALSE, fig.cap="Time-series of aggregate escapement for WCVI Chinook (indicator stocks with PNI > 0.5), with projection-based LRPs associated with component inlets being > lower benchmarks at p=0.5 (yellow) and p=0.66 (blue). Red points are the generational average escapement (geometric mean), red indicating status below LRPs", out.width = '60%'}
+```{r chinook-statusProjLRP, echo=FALSE, fig.cap="Time-series of aggregate escapement for WCVI Chinook (indicator stocks with PNI > 0.5), with projection LRPs associated with component inlets being > lower benchmarks at p=0.5 (yellow) and p=0.66 (blue). Red points are the generational average escapement (geometric mean), red indicating status below LRPs", out.width = '60%'}
 
 #knitr::include_graphics("figure/chinook-WCVI-SMUtimeseries.png")
 knitr::include_graphics("figure/chinook-SMU-timeseries.png")
@@ -604,16 +604,16 @@ knitr::include_graphics("figure/chinook-ERs-ProjLRPCurve-ALLp.png")
 
 
 
-To explain the initially counter-intuitive result of sensitivity of projection-based LRPs to exploitation rates, we ran additional analyses for a hypothetical SMU where the spawner-recruitment parameters were either varied or kept constant over component inlets (or CUs) and Monte Carlo trials, and a range of exploitation rates were applied (Appendix \@ref(app:ERsensitivity-appendix)). Based on these sensitivity analyses, we found that differences in productivity among component inlets results in inlet-specific variability in sensitivity to exploitation rates. Inlets with relatively low productivity fall below lower benchmarks more frequently. This effect is accentuated when exploitation rates are high resulting in divergences in status among inlets and higher aggregate abundances required for all inlets to be above their lower benchmarks (i.e., higher LRP). 
+To explain the initially counter-intuitive result of sensitivity of projection LRPs to exploitation rates, we ran additional analyses for a hypothetical SMU where the spawner-recruitment parameters were either varied or kept constant over component inlets (or CUs) and Monte Carlo trials, and a range of exploitation rates were applied (Appendix \@ref(app:ERsensitivity-appendix)). Based on these sensitivity analyses, we found that differences in productivity among component inlets results in inlet-specific variability in sensitivity to exploitation rates. Inlets with relatively low productivity fall below lower benchmarks more frequently. This effect is accentuated when exploitation rates are high resulting in divergences in status among inlets and higher aggregate abundances required for all inlets to be above their lower benchmarks (i.e., higher LRP). 
 
 
-Given uncertainty in current and anticipated productivity, projection-based LRPs were further evaluated under a range of productivities from 75% - 150% of base case estimates, under current exploitation. Scenarios with lower productivity (<0.75x current estimates) had a large proportion of trajectories with productivity below replacement, for which LRPs could not be estimated. 
+Given uncertainty in current and anticipated productivity, projection LRPs were further evaluated under a range of productivities from 75% - 150% of base case estimates, under current exploitation. Scenarios with lower productivity (<0.75x current estimates) had a large proportion of trajectories with productivity below replacement, for which LRPs could not be estimated. 
 
-Projection-based LRPs tended to increase under low productivity and vice versa (Figure \@ref(fig:chinook-projLRPsAlpha)), a trend that was expected due to the inverse relationship between productivity and inlet-specific S~gen~ values [@holtCautionsUsingPercentilebased2015]. At low productivity, S~gen~ tends to increase, thereby becoming more precautionary.  The sensitivity of LRPs to productivity highlights the value of updating benchmarks and projection-based LRPs as productivity changes. Our results also show that uncertainty in projections increased under low productivity, likely requiring more random Monte Carlo trials for stabilization at p=0.5, i.e., 50% probability of CUs being above their lower benchmarks. The probability of all inlets being above their lower benchmark rarely met or exceeded 0.66 ['likely' category, @mastrandreaGuidanceNoteLead2010] when productivity was low, so LRPs at this level could not be estimated. When productivity was high, the probability of all inlets being above their lower benchmark rarely dropped below 0.66. At high productivity, LRPs at the p=0.5 level could not be estimated. More detailed analyses of LRPs along the entire range of productivities and exploitation was beyond the scope of this case study.
+Projection LRPs tended to increase under low productivity and vice versa (Figure \@ref(fig:chinook-projLRPsAlpha)), a trend that was expected due to the inverse relationship between productivity and inlet-specific S~gen~ values [@holtCautionsUsingPercentilebased2015]. At low productivity, S~gen~ tends to increase, thereby becoming more precautionary.  The sensitivity of LRPs to productivity highlights the value of updating benchmarks and projection LRPs as productivity changes. Our results also show that uncertainty in projections increased under low productivity, likely requiring more random Monte Carlo trials for stabilization at p=0.5, i.e., 50% probability of CUs being above their lower benchmarks. The probability of all inlets being above their lower benchmark rarely met or exceeded 0.66 ['likely' category, @mastrandreaGuidanceNoteLead2010] when productivity was low, so LRPs at this level could not be estimated. When productivity was high, the probability of all inlets being above their lower benchmark rarely dropped below 0.66. At high productivity, LRPs at the p=0.5 level could not be estimated. More detailed analyses of LRPs along the entire range of productivities and exploitation was beyond the scope of this case study.
    
 <!--CH: add Mike Staley's concern about depensation. to what extent can this SA on low produciivty inform Q about depensation?  Mention, "all models are wrong but some are useful", or reword this-->
 
-```{r chinook-projLRPsAlpha, echo=FALSE, fig.cap="Projection-based LRPs estimated under assumptions of reduced productivity (0.75x of current levels) and increased productivity (1.5x current levels).  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue) are highlighted. More Monte Carlo trials are required for stabilization of LRPs at low productivity. LRPs at p=0.66 could not be estimated at low productivity, and LRPs at p=0.5 could not be estimated at high productivity", out.width = '80%'}
+```{r chinook-projLRPsAlpha, echo=FALSE, fig.cap="Projection LRPs estimated under assumptions of reduced productivity (0.75x of current levels) and increased productivity (1.5x current levels).  Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue) are highlighted. More Monte Carlo trials are required for stabilization of LRPs at low productivity. LRPs at p=0.66 could not be estimated at low productivity, and LRPs at p=0.5 could not be estimated at high productivity", out.width = '80%'}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/ProjectedLRPs/Alphas-ProjLRPCurve-ALLp.png', './figure/chinook-Alphas-ProjLRPCurve-ALLp.png',  mode="wb")
 
@@ -624,7 +624,7 @@ knitr::include_graphics("figure/chinook-Alphas-ProjLRPCurve-ALLp.png")
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-We evaluated the status of WCVI Chinook using LRPs estimated using the proportion of CUs with all inlets above S~gen~ and projection-based LRPs, as well as the previously published WSP integrated assessment [status in 2014 only, @dfoIntegratedBiologicalStatus2016, Figure \@ref(fig:chinook-retro)]. All methods indicate this SMU being below its LRP for years where data are available. We use the same nomenclature as for Interior Fraser River Coho Salmon, where 'Prop' indicates proportion-based LRPs, 'Abund' indicates aggregate abundance-based LRPs, 'Scanner' indicates CU-level assessments derived from the Pacific Salmon Status Scanner, 'Sgen' indicates CU assessments derived on a single metric, (e.g., abundances relative to the lower benchmark S~gen~), and 'Proj' indicates projection-based LRPs. For this SMU, the two approaches to CU assessments gave the same statuses, and are repeated in the plot for emphasis. 
+We evaluated the status of WCVI Chinook using LRPs estimated using the proportion of CUs with all inlets above S~gen~ and projection LRPs, as well as the previously published WSP integrated assessment [status in 2014 only, @dfoIntegratedBiologicalStatus2016, Figure \@ref(fig:chinook-retro)]. All methods indicate this SMU being below its LRP for years where data are available. We use the same nomenclature as for Interior Fraser River Coho Salmon, where 'Prop' indicates proportional LRPs, 'Abund' indicates aggregate abundance LRPs, 'Scanner' indicates CU-level assessments derived from the Pacific Salmon Status Scanner, 'Sgen' indicates CU assessments derived on a single metric, (e.g., abundances relative to the lower benchmark S~gen~), and 'Proj' indicates projection LRPs. For this SMU, the two approaches to CU assessments gave the same statuses, and are repeated in the plot for emphasis. 
    
 
 ```{r chinook-retro, echo=FALSE, fig.cap="Historical evaluation of status using available methods for estimating LRPs. Red bars indicate status below LRP; grey x's indicate status not available", out.width = '80%'}
@@ -638,11 +638,11 @@ knitr::include_graphics("figure/chinook-statusPlot-withBars2020.png")
 
 ## DISCUSSION
 
-A few key conclusions from this case study are highlighted for broader relevance. Status was consistent across the LRP methods that were available, and with a previously published assessment. This SMU is generally managed at scales smaller than the SMU supporting the application of proportion-based LRPs to allow management decisions to be responsive to CU- or inlet-level statuses. However, aggregate abundance-based LRPs were also estimated here for demonstration purposes. It was not possible to estimate a logistic regression-based LRP due to lack of contrast in the time-series, so we focused our analyses on projection-based LRPs.
+A few key conclusions from this case study are highlighted for broader relevance. Status was consistent across the LRP methods that were available, and with a previously published assessment. This SMU is generally managed at scales smaller than the SMU supporting the application of proportional LRPs to allow management decisions to be responsive to CU- or inlet-level statuses. However, aggregate abundance LRPs were also estimated here for demonstration purposes. It was not possible to estimate a logistic regression LRP due to lack of contrast in the time-series, so we focused our analyses on projection LRPs.
 
-Projection-based LRPs were highly sensitivity to average exploitation for this SMU. LRPs derived assuming current exploitation rates cannot be used as an indicator of serious harm if the management procedure changes. Projection-based LRPs were also highly sensitive to underlying population productivities. As productivity declined, LRPs increased, becoming more precautionary, reflecting trends of underlying benchmarks. Projection-based LRPs at probabilities levels of 90% and 99% could not be estimated for this SMU because of the relatively low covariation in population dynamics among CUs. The probability of all CUs exceeding their lower benchmarks was never high, even at high aggregate abundances. 
+Projection LRPs were highly sensitivity to average exploitation for this SMU. LRPs derived assuming current exploitation rates cannot be used as an indicator of serious harm if the management procedure changes. Projection LRPs were also highly sensitive to underlying population productivities. As productivity declined, LRPs increased, becoming more precautionary, reflecting trends of underlying benchmarks. Projection LRPs at probabilities levels of 90% and 99% could not be estimated for this SMU because of the relatively low covariation in population dynamics among CUs. The probability of all CUs exceeding their lower benchmarks was never high, even at high aggregate abundances. 
 
-In the development of projection-based LRPs, inlets were chosen as the spatial scale of biodiversity required for the sustainability for the SMU. In future analyses, alternative assumptions could be considered, including LRPs derived to maintain diversity at the CU scale by projecting CU-level abundances.  In addition, future iterations of the multidimensional status assessments used within the Pacific Salmon Status Scanner could include information on the distribution of spawners across inlets within CUs to incorporate this finer scale of biodiversity.  The projection-based LRPs developed here are for demonstration purposes only. Further evaluation of the influence of hatcheries on spawner abundances and model assumptions, including the form of the stock-recruitment relationship, would be required prior to providing aggregate abundance-based LRPs for this SMU. 
+In the development of projection LRPs, inlets were chosen as the spatial scale of biodiversity required for the sustainability for the SMU. In future analyses, alternative assumptions could be considered, including LRPs derived to maintain diversity at the CU scale by projecting CU-level abundances.  In addition, future iterations of the multidimensional status assessments used within the Pacific Salmon Status Scanner could include information on the distribution of spawners across inlets within CUs to incorporate this finer scale of biodiversity.  The projection LRPs developed here are for demonstration purposes only. Further evaluation of the influence of hatcheries on spawner abundances and model assumptions, including the form of the stock-recruitment relationship, would be required prior to providing aggregate abundance LRPs for this SMU. 
 
 A key uncertainty for this SMU is the contribution of hatcheries to total abundances. Although only indicator stocks where most of the production was from natural spawning were included, hatchery enhancement likely biases abundance estimates upwards, providing an optimistic characterization of status compared to if the hatchery contribution were removed. Furthermore, hatchery production can result in optimistic estimates of recruitment and productivity, resulting in LRPs that are biased low. Time-series of hatchery-origin spawners were not available for most of the stocks we considered, precluding the ability to account for enhancement quantitatively in abundance estimates.
 
