--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -50,7 +50,7 @@ csasdown::csas_table(d,
 Benchmarks based on spawner-recruit relationships are unreliable if underlying recruitment data are unreliable. One alternative is benchmarks calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks). Previous work on developing WSP benchmarks for Inner South Coast Chum has shown that percentile benchmarks can be comparable to those based on stock-recruit relationships when productivity is relatively high and harvest is relatively low [@holtEvaluatingBenchmarksBiological2018]. In other cases, percentile benchmarks may be inappropriate due to low productivity or high harvest, resulting in a shifting baseline [@holtEvaluatingBenchmarksBiological2018].
 
 
-We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU without stock-recruitment or habitat-based benchmarks. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and aggregate abundance-based LRPs estimated using the logistic regression approach. 
+We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU without stock-recruitment or habitat-based benchmarks. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and aggregate abundance LRPs estimated using the logistic regression approach. 
 <!--KH: The following sentences duplicate info presented below in the CU STATUS ESTIMATION section; I suggest removing them from here 'For proportions, we used percentile benchmarks and multidimensional status assessments derived from the Pacific Salmon Status Scanner (Pestal et al., in prep.) to determine the status of component CUs. For the logistic regressions, we used percentile and S~gen~ benchmarks. However, after attempting S~gen~ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt *et al.* (in review).' -->
 
 ## DATA
@@ -179,13 +179,13 @@ knitr::include_graphics('figure/fig_percentile_bm_rel_abd.png')
 
 ### Methods
 
-We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. While we initially considered logistic regression-based LRPs that used S~gen~ as a lower CU benchmark instead of percentiles, we decided to drop this approach due to unreliable  stock recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
+We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. While we initially considered logistic regression LRPs that used S~gen~ as a lower CU benchmark instead of percentiles, we decided to drop this approach due to unreliable  stock recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
 
 
-Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic regression-based LRPs for this SMU as was done for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
+Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic regression LRPs for this SMU as was done for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
 
 
-Projection-based LRPs are an alternative aggregate abundance LRP that we did not consider for this SMU due to lack of peer-reviewed stock-recruitment parameter estimates<!--CW replace: parameter estimates. LW: realized that Holt et al. 2018 did have parameter estimates for alpha in tables, and used those to recommend percentile benchmarks. Might want to replace 'peer-reviewed' with 'reliable'? --> for component CUs. However, this approach could be considered in future analyses given consensus on model structure and parameterization that provide realistic uncertainties in projections of population dynamics.
+Projection LRPs are an alternative aggregate abundance LRP that we did not consider for this SMU due to lack of peer-reviewed stock-recruitment parameter estimates<!--CW replace: parameter estimates. LW: realized that Holt et al. 2018 did have parameter estimates for alpha in tables, and used those to recommend percentile benchmarks. Might want to replace 'peer-reviewed' with 'reliable'? --> for component CUs. However, this approach could be considered in future analyses given consensus on model structure and parameterization that provide realistic uncertainties in projections of population dynamics.
 
 
 ### Results
@@ -269,7 +269,7 @@ knitr::include_graphics('figure/chum-compare-LRP-methods.png')
 ## DISCUSSION
 
 
-As a data-limited SMU, the ISC Chum case study had unique characteristics to inform the guidelines for LRP development. We found that only the proportion-based LRP were applicable to this SMU, which is based on individual CU status. Because there were no reliable stock-recruit parameter estimates, we relied on data-limited methods to estimate CU status. We assessed CU status based on abundance relative to percentile benchmarks alone, or on a combination of percentiles and trends<!--LW: also uses 1500 and 10000 fish thresholds, just didn't get below 1500 fish--> within the Salmon Scanner. The use of the Salmon Scanner was particularly valuable because percentile benchmarks were not appropriate for two of the CUs (Bute Inlet and Southern Coastal Stream, \@ref(tab:CU-summary)). Missing data also required decisions to be made about which CUs to include in which years. We used this case study to explore how sensitive proportion-based LRPs were to the decisions on number of CUs, and years of data to include in the analysis.
+As a data-limited SMU, the ISC Chum case study had unique characteristics to inform the guidelines for LRP development. We found that only the proportional LRP were applicable to this SMU, which is based on individual CU status. Because there were no reliable stock-recruit parameter estimates, we relied on data-limited methods to estimate CU status. We assessed CU status based on abundance relative to percentile benchmarks alone, or on a combination of percentiles and trends<!--LW: also uses 1500 and 10000 fish thresholds, just didn't get below 1500 fish--> within the Salmon Scanner. The use of the Salmon Scanner was particularly valuable because percentile benchmarks were not appropriate for two of the CUs (Bute Inlet and Southern Coastal Stream, \@ref(tab:CU-summary)). Missing data also required decisions to be made about which CUs to include in which years. We used this case study to explore how sensitive proportional LRPs were to the decisions on number of CUs, and years of data to include in the analysis.
 
 
 Using the Salmon Scanner allowed us to include two CUs that did not have appropriate percentile benchmarks (Bute Inlet and Southern Coastal Streams). It allowed all 7 CUs to be included when assessing SMU status by allowing alternative trend-based metrics to be considered. The seven-CU partial case provided the most pessimistic status of the scenarios considered as this approach used the most data. It resulted with the most years of the SMU being below the LRP (Figure \@ref(fig:chum-LRP-compare)). This tool is useful for SMUs with a mix of data qualities and benchmark types, including those with and without relative abundance benchmarks. Like any approach to assess LRPs, the underlying data, and benchmarks applied (if abundance benchmarks can be used) should be verified by experts. In its current form, the Salmon Scanner relies on whether abundance is <0.79$\times$ the long-term geometric average and whether abundances are >1500 in the absence of abundance-based benchmarks. It is worth noting that this long-term geometric average may also be sensitive to shifting baselines. This is another reason for experts to thoroughly review the data before any status assessment is made. 
@@ -291,11 +291,11 @@ An additional source of uncertainty stems from spawner time series that may incl
 <!--LW: Need to check with Pieter Van Will on how much or a risk this actually is based on amount of hatchery production for ISC chum and straying. Look at Lynch et al. 2020 report  http://publications.gc.ca/collections/collection_2021/mpo-dfo/Fs97-13-1319-eng.pdf as well--> 
 
 
-We showed that increasing the number of CUs included in proportion-based LRP status assessment gave a more pessimistic status. This is not surprising given the low correlation of CUs within this SMU; we do not expect CUs to be interchangeable. Therefore, it makes sense to use as much data as possible to represent variable dynamics within the CU, where those data are reliable. For this SMU where the status of two data-limited CUs, Upper Knight and Bute Inlet, cannot be inferred from data-rich CUs (see Section \@ref(chum-context)), omitting the data-limited CUs from analyses can result in either an SMU status that is data deficient or below the LRP depending on status of remaining data-rich CUs. When the status of at least one of the data-rich CUs is in the red zone, the proportion-based LRP of 100% of CUs above the red zone is considered breached. However, if the status of all data-rich CUs are above the red zone, the SMU is considered data deficient if status of data-limited CUs is unknown because it cannot be inferred. In our case, we could assess status based on trends for these data-limited CUs as applied in the Salmon Scanner. However, in other SMUs, there may be cases where data to estimate trends are not available.
+We showed that increasing the number of CUs included in proportional LRP status assessment gave a more pessimistic status. This is not surprising given the low correlation of CUs within this SMU; we do not expect CUs to be interchangeable. Therefore, it makes sense to use as much data as possible to represent variable dynamics within the CU, where those data are reliable. For this SMU where the status of two data-limited CUs, Upper Knight and Bute Inlet, cannot be inferred from data-rich CUs (see Section \@ref(chum-context)), omitting the data-limited CUs from analyses can result in either an SMU status that is data deficient or below the LRP depending on status of remaining data-rich CUs. When the status of at least one of the data-rich CUs is in the red zone, the proportional LRP of 100% of CUs above the red zone is considered breached. However, if the status of all data-rich CUs are above the red zone, the SMU is considered data deficient if status of data-limited CUs is unknown because it cannot be inferred. In our case, we could assess status based on trends for these data-limited CUs as applied in the Salmon Scanner. However, in other SMUs, there may be cases where data to estimate trends are not available.
 
 
 We were not able to estimate aggregate abundance logistic regression LRPs for ISC Chum due to poor model fits of the underlying data. The data were not suited to logistic regression, and aggregate abundance was not a good predictor of the status of component CUs. Abundance for two CUs was regularly two orders of magnitude larger than the smaller CUs (Figure \@ref(fig:chum-spawner-distribution)), and correlation in abundances between CUs was generally low (Figure \@ref(fig:chum-spawner-corr)). Thus, aggregate abundance can be high mainly due to high abundance CUs while low abundance CUs have red status, and the SMU is thus below the LRP. This pattern is exacerbated because the two most abundant CUs have the highest correlation in escapement with each other, and generally low correlation with the other CUs (Figure \@ref(fig:chum-spawner-corr)). This pattern is also the reason why SMU status can be below the LRP even as aggregate abundances increase (Figure \@ref(fig:chum-LRP-compare)). The large geographical range of the SMU, different numbers of populations within each CU, and variation in productivity, threats, and ecosystem conditions help explain these characteristics of the data.
 
 
-The CUs that were missing observations in some years and required CU-level infilling (Upper Knight and Bute Inlet) were not used in the aggregate abundance LRP analysis because the assumption that escapement is correlated between CUs ignores diversity between CUs and the potential for uncorrelated escapements. Unlike proportion-based LRPs, for aggregate abundance-based LRPs, we did not consider status based on the Salmon Scanner which that does not require infilling. It should also be noted that these two CUs do not represent a random subset of the seven CUs in the Inside South Coast Chum SMU due to their location, watershed characteristics, near-shore marine environment, threats, and environmental conditions (Section \@ref(chum-context)). 
+The CUs that were missing observations in some years and required CU-level infilling (Upper Knight and Bute Inlet) were not used in the aggregate abundance LRP analysis because the assumption that escapement is correlated between CUs ignores diversity between CUs and the potential for uncorrelated escapements. Unlike proportional LRPs, for aggregate abundance LRPs, we did not consider status based on the Salmon Scanner which that does not require infilling. It should also be noted that these two CUs do not represent a random subset of the seven CUs in the Inside South Coast Chum SMU due to their location, watershed characteristics, near-shore marine environment, threats, and environmental conditions (Section \@ref(chum-context)). 
 
