--- a/caseStudyWP/index.Rmd
+++ b/caseStudyWP/index.Rmd
@@ -53,7 +53,7 @@ report_number: nnn
 region: Pacific Region
 citation_other_language: "Holt, K.R., Holt, C.A., Warkentin, L., Wor, C., Davis, B., Arbeider, M., Bokvist, J., Crowley, S., Grant, S., Luedke, W., McHugh, D., Picco, C., et Van Will, P.. Title Here (*Latin Species Name*). DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2022/nnn. iv + 13 p."
 abstract: |
-  The revised fisheries act required that Limit Reference Points (LRPs) be identified for all major fish stocks. For Pacific salmon, major fish stocks are represented by stock management units (SMUs), which are composed of one or more salmon conservation units (CUs), which are the assessment units under the Wild Salmon Policy. We introduce LRP estimation methods based on aggregating status assessments from the CU level to the SMU level. We demonstrate and evaluate the LRPs for three case study SMUs: Interior Fraser Coho, West Coast Vancouver Island (WCVI) Chinook, and Inner South Coast Chum - excluding Fraser. Methods are divided into two categories: Proportion-based LRPs and Aggregate abundance-based LRPs, which is further sub divided into logistic regression-based LRPs and projection-based LRPs. The suitability of each method depends on the type, availability and quality of data for each SMU, as well as on historic CU statuses. Proportion-based LRPs are recommended as the default method, while aggregate abundance-based methods are complementary and may be needed to meet management requirements. Proportion-based LRPs are based on individual CU status assessments. Aggregate abundance logistic regression-based LRPs are based on past status assessments and are estimable when abundance-based CU status is available, and the SMU data time series has contrasting observations (i.e., there are observations where the LRP has been breached (at least one CU under Red status) and not breached (all CUs above Red status)). Conversely, Aggregate abundance projection-based LRPs are based on future projections and do not require contrast in previous status observations. However, projection-based LRPs require estimates for population dynamics parameters, as well as evidence of positive covariation among CUs. We discuss suitability and requirements for the application of the various LRP estimation methods, drawing from the range of data and information availability among the case studies.  
+  The revised *Fisheries Act* requires that Limit Reference Points (LRPs) be identified for all major fish stocks. For Pacific salmon, major fish stocks are represented by stock management units (SMUs). An SMU is composed of one or more salmon conservation units (CUs), which are the assessment units under the Wild Salmon Policy. We introduce methods to estimate LRPs that combine status assessments at the CU level to the SMU level. We demonstrate and evaluate the LRPs for three case study SMUs: Interior Fraser Coho, West Coast Vancouver Island (WCVI) Chinook, and Inner South Coast Chum - excluding Fraser. Methods are divided into two categories: proportional LRPs and aggregate abundance LRPs. Aggregate abundance LRPs are further sub divided into logistic regression LRPs and projection LRPs. The suitability of each method depends on the type, availability and quality of data for each SMU, as well as past CU statuses. Proportional LRPs are recommended as the default method. Aggregate abundance methods may be added to meet specific fisheries management requirements. Proportional LRPs are based on individual CU status assessments. Aggregate abundance logistic regression LRPs are based on past status assessments and are estimable when abundance-based CU status is available, and the SMU data time series has contrasting observations (i.e., there are observations where the LRP has been breached (at least one CU under Red status) and not breached (all CUs above Red status)). Conversely, aggregate abundance projection LRPs are based on future projections and do not require contrast in previous status observations. However, projection LRPs require estimates for population dynamics parameters, as well as evidence of positive covariation among CUs. We discuss suitability and requirements for the application of the various LRP estimation methods, drawing from the range of data and information availability among the case studies.  
 
 header: "Draft working paper --- Do not cite or circulate" # or "" to omit
 output:
